--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="styles.css">
         <title>Quote Generator</title>
     </head>
-    <body>
+    <body><div>
+    </div>
         <div id="quote-box">
         <div id="text-box">
             <div id="text">Random Quote Machine</div>
