--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
@@ -17,6 +16,6 @@
         </div>
         
         </div>
-        <script src="script.js"></script>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
