--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <title>Quote Generator</title>
+        <script src="https://kit.fontawesome.com/c610fb6a30.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body><div>
+    <body id="body"><div>
     </div>
         <div id="quote-box">
         <div id="text-box">
@@ -11,11 +13,12 @@
             <div id="author">by: mcc_code</div>    
         </div>
         <div id="bottom-box">
-            <div id="tweet">twt</div>
+            <div id="tweet">
+                <a id="tweet-quote" href="https://twitter.com/intent/tweet"><i class="fa-brands fa-square-twitter"></i></a></div>
             <button id="new-quote">New Quote</button>
         </div>
-        
         </div>
+        <div class="credits">powered by: https://thesimpsonsquoteapi.glitch.me/</div>
         <script type="module" src="script.js"></script>
     </body>
 </html>
