--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         </div>
         <div class="credits">powered by: https://thesimpsonsquoteapi.glitch.me/</div>
         <script type="module" src="script.js"></script>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
